Ajout titre dans evenementForm

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -386,6 +386,7 @@ valeur=Valeur
 typeEvenement=Type d'événement
 evenement=Événement
 evenements=Événements
+ajouterEvenement=Ajouter un événement
 supprimerEvenement=Supprimer cet événement
 evenementCree=Créer un événement
 aucun=<Aucun>
