rucherDetail.html message pas de ruche dans ce rucher

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -101,6 +101,7 @@ trace=Pile de l'exception :
 oups=Oups, quelque chose s'est mal passé !
 
 # Templates ruche
+Pasderuche=Pas de ruche actuellement dans ce rucher
 dateAcquisition=Acquisition
 dateIncorrecte=Date incorrecte
 poidsVide=Poids
