ajout des cercles de butinage sur cartes ruchers ign/osm

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -202,6 +202,8 @@ exportGPX=Export GPX
 exportKML=Export KML
 parcoursRecalcul=Re-calculer le parcours des ruches
 statistiquesruchers=Statistiques ruchers
+cercles=Cercles
+distButinage=Distances de butinage
 
 # Template personne
 prenom=Prénom
