recolteChoixHausses par select dans le tableau

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -323,6 +323,7 @@ ProductionRuchers=Production Ruchers
 haussesRecolte=Hausses de la récolte
 choixHausesRecolte=Choix des hausses de la récolte
 retirerHausses=Retirer des hausses
+selecthaussestraiter=Sélectionner les hausses à traiter
 
 # Template recolteHausseForm
 plus=Plus
