recolteChoixHausses multi select sur retrait hausses

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -330,8 +330,8 @@ plus=Plus
 
 # Template récolte détail
 detailRecolte=Détail de la récolte
-poidsAvant=Poids avant récolte
-poidsApres=Poids après récolte
+poidsAvant=Poids avant extraction
+poidsApres=Poids après extraction
 recolteHausse=Récolte - Hausse
 recolteHausseDepot=Enlève toutes les hausses de la récolte de leurs ruches
 enlevertoutesleshaussesrecolte=Enlever toutes les hausses de cette récolte de leurs ruches ?
