recolteHausseForm poids avant et après > poids vide

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -327,6 +327,7 @@ selecthaussestraiter=Sélectionner les hausses à traiter
 
 # Template recolteHausseForm
 plus=Plus
+poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
 
 # Template récolte détail
 detailRecolte=Détail de la récolte
