AJouté case à cocher Marqueurs fixes sur cartes ign et osm

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -184,8 +184,8 @@ ajoutderuches=Ajout de ruches
 rucherscarteign=Ruchers. Carte IGN
 rucherscarteosm=Ruchers. Carte OpenStreetMap
 rucherscarteggmaps=Ruchers. Carte Google
-aiderucherdetailignmarkers=Doubleclic sur une ruche pour afficher son détail<br/>Un clic pour la sélectionner, puis clic pour la déplacer<br/>Clic sur fond de carte pour désélectionner
-aiderucherlisteignmarkers=Doubleclic sur un rucher pour afficher son détail<br/>Un clic pour le sélectionner, puis clic pour le déplacer<br/>Clic sur fond de carte pour désélectionner
+aiderucherdetailignmarkers=Doubleclic sur une ruche pour afficher son détail<br/>Un clic pour la sélectionner, puis clic pour la déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
+aiderucherlisteignmarkers=Doubleclic sur un rucher pour afficher son détail<br/>Un clic pour le sélectionner, puis clic pour le déplacer (seulement si la case Marqueurs fixes n'est pas cochée)<br/>Clic sur fond de carte pour désélectionner
 selectruchesretrait=Sélectionner les ruches à retirer
 selectruchesajout=Sélectionner les ruches à ajouter
 ajoutruches=Ajout dans le rucher
