recolteDetail.html message Total pour la ruche

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -340,6 +340,7 @@ supprimerrecolteethausses=Supprimer cette récolte et toutes ses hausses ?
 statistiquesessaims=Statistiques essaims
 productionessaim=Production par essaim.
 saisirpoids=Saisir les poids
+totalPourLaRuche=Total pour la ruche
 
 # Evénements
 RUCHEAJOUTRUCHER=Ajout dans rucher
