titre statistiques production ruchers par récolte

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -317,7 +317,7 @@ enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
 ProductionEssaimRecolte=Production Essaim/Récolte
 ProductionEssaim=Production Essaims
 
-ProductionRuchers=Production Ruchers
+ProductionRuchersRecolte=Production Ruchers par récolte
 
 # Template récolte choix hausses
 haussesRecolte=Hausses de la récolte
