Openlayers 6.5 GPplugin merge update ol6

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -176,6 +176,8 @@ ressource=Ressource
 ajoutRuches=Ajouter des ruches
 creationevecadrezero=Création événement 0 cadre
 
+enregistreDessin=Enregistrer le dessin
+
 # carte ign
 pleinecran=Bascule plein écran
 couchemarqueursruches=Couche des marqueurs Ruches
