Maj messages_en.properties

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -9,9 +9,14 @@ include.title=Hives
 include.footer= *** Ruches - GPL3 -
 liste=List
 listedetail=Detailed list
-deploie=Déploy war file
+deploie=Deploy war file
 downloaddump=Download database dump
 downloadschema=Download database schema
+menuessaim=Swarm
+menuruche=Hive
+menuhausse=Super
+Admin=Admin
+logs=Logs
 
 # Template preferences
 datedecalee=Shifted date
@@ -27,6 +32,9 @@ connecte=Connected
 login=Login
 password=Password
 roles=Roles
+resetPassword=Reset password
+forgotPassword=Pasword forgotten ?
+affichermotdepasse=Show password ?
 
 # Template infos
 infos=Infos
@@ -54,6 +62,7 @@ oui=yes
 non=no
 detail=Detail
 enregistrer=Save
+filtrer=Filter
 reinitialiser=Reset
 markerFixes=Fixed markers
 buttontextprint=Print
@@ -66,6 +75,15 @@ Total=Total
 Totalpage=Total page
 Ordre=Order
 
+# Essaim statistiques production
+Max=Max
+Min=Min
+Moyen=Moyen
+Duree=Duration
+aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
+
+aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
+
 # Accueil
 accueil=Home page
 retouraccueil=Back to home page
@@ -73,14 +91,17 @@ erreur=Error {0}
 accueil.message=La Lisette Bees
 parametres=Parameters
 voirInactif=Show inactives
+masquerInactif=Hide inactives
 voirLatLon=Show latitude et longitude in lists
 
 # Pages erreur
 responsestatus=Http code : 
 occurred=Date
 trace=Exception stack : 
+oups=Oups, something went wrong !
 
 # Templates ruche
+Pasderuche=Currently no hive in this apiary
 dateAcquisition=Acquisition
 dateIncorrecte=Incorrect date
 poidsVide=Weight
@@ -97,6 +118,7 @@ ajouterRucheType=Add a hive type
 ajoutRuche=Addirion of a hive
 listeRuches=Hives list
 daterucher=Date rucher
+
 listeRuchesOrdonnees=Hives ordered list along the route
 listePlusRuchesOrdonnees=Hives ordered detailed list along the route
 parcours=Route
@@ -104,6 +126,7 @@ parcoursoptimum=Optimum route along the hives
 ruches=hives
 distancedeparcours=Route length
 Entree=Entrance
+
 coordRucher=Apiary coord.
 carteGg=Google Map
 carteIgn=IGN Map
@@ -111,7 +134,6 @@ carteOsm=OSM Map
 nomexiste=This name already exist
 ajouterhausse=Add this super
 retirerhausse=Remove this super
-
 dernierevenementsruche=Last events (hive and swarm)
 ajoutretraithausses=Add/Remove/Order supers. 
 
@@ -134,7 +156,6 @@ retraithausseXXdela=Remove super {0} from
 retraithausse=Remove super 
 
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
-# evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
 
 # Template descendance
 MielKg=Hoey(kg)
@@ -154,6 +175,9 @@ listeRuchers=Apiaries list
 depot=Depot
 ressource=Resource
 ajoutRuches=Add hives
+creationevecadrezero=Create 0 super event
+
+enregistreDessin=Save drawing
 
 # carte ign
 pleinecran=Toggle full-screen
@@ -177,11 +201,18 @@ supprimerruchereteven=Delete this apiary and all its events ?
 supprimercerucher?=Delete this apiary ?
 exportPng=PNG export
 exportPdf=PDF export
+exportGPX=GPX export
+exportKML=KML export
+parcoursRecalcul=Re-calculate hive route
+statistiquesruchers=Apiary statistics
+cercles=Circles
+distButinage=Foraging distances
 
 # Template personne
 prenom=First name
 personne=People
 email=Email
+emailexiste=This email is already used
 lesPersonnes=People
 ajouterPersonne=Add a person
 listePersonnes=Persons list
@@ -195,7 +226,7 @@ Pasdessaim=No swarm
 lesEssaims=Swarms
 nomessaimsvirgule=Swarm names separated with a comma
 traitement=Varroa treatment
-traitementVaroaLot=Batch Varroa treatment 
+traitementLot=Batch Varroa treatment 
 reineMarquee=Marked queen
 reineCouleurMarquage=Marking color
 reineDateNaissance=Date of birth
@@ -224,6 +255,7 @@ evenementsTraitement=Add treatment events
 associationruche=Association with a hive
 association=Association
 essaimdanslaruche=This swarm in in hive
+mettreessaimdanslaruche=Put this swarm in hive :
 
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
 supprimeressaimevenements=Delete this swarm and his events ?
@@ -232,6 +264,9 @@ mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
 graphedescendance=Descendants graph
 souche=Stem
+
+agressivite=Agressiveness
+proprete=Cleanliness
 
 # essaimDispersionForm
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
@@ -267,6 +302,7 @@ date=Date
 typeMiel=Honey type
 poidsMiel=Honey weight
 poidsMielPot=Honey weight jarred
+poidsMielMoyen=Honey average weight per hive
 poidsMielHausses=Supers honey weight
 remplissage=Filling
 ajouterRecolte=Add a harvest
@@ -278,17 +314,23 @@ TOUTES_FLEURS=Polyfloral
 ROMARIN=Rosemary
 recoltesannees=Harvests by years, weight of honey in pots (kg)
 ajoutretraithaussesrecolte=Addition/Removal of supers
+enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 
 # Template RecolteStatEssaim
 ProductionEssaimRecolte=Production Swarm/Harvest
+ProductionEssaim=Production Swarm
+
+ProductionRuchersRecolte=Production Apiaries per harvest
 
 # Template récolte choix hausses
 haussesRecolte=Harvest supers
 choixHausesRecolte=Select harvest supers
 retirerHausses=Remove supers
+selecthaussestraiter=Select the supers to be processed
 
 # Template recolteHausseForm
 plus=More
+poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
 
 # Template récolte détail
 detailRecolte=Harvest detail
@@ -301,6 +343,7 @@ supprimerrecolteethausses=Remove this harvest and all its supers ?
 statistiquesessaims=Swarms statistics
 productionessaim=Production by swarm. 
 saisirpoids=Get weight
+totalPourLaRuche=Total for the hive
 
 # Evénements
 RUCHEAJOUTRUCHER=Add in an apiary
@@ -328,6 +371,7 @@ evenementstraitement=Treatment events
 evenementspoidsruche=Hive weight events
 evenementcadreruche=Hive frame events
 evenementremplissagehausse=Super filling events
+evenementsrucheajout=Hive add in apiary events
 poidsruche=Hive weight
 cadreruche=Hive frame
 remplissagehausse=Super filling
@@ -338,10 +382,18 @@ rucheTypes=Hive types
 ajouterRucheType=Add a hive type
 
 # événements
+touteperiode=Any period
+moinsdunan=Less than a year
+moinsdunmois=Less than a month
+moinsdunesemaine=Less than a week
+moinsdunjour=Less than a day
+datesprecises=Specific dates
+
 valeur=Value
 typeEvenement=Event type
 evenement=Event
 evenements=Events
+ajouterEvenement=Add event
 supprimerEvenement=Delete this event
 evenementCree=Create an event
 aucun=<None>
