AcceptHeaderLocaleResolver pour langage en fonction du navigateur

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -33,7 +33,7 @@ login=Login
 password=Password
 roles=Roles
 resetPassword=Reset password
-forgotPassword=Pasword forgotten ?
+forgotPassword=Forgot pasword ?
 affichermotdepasse=Show password ?
 
 # Template infos
@@ -117,7 +117,7 @@ ajouterRuche=Add a hive
 ajouterRucheType=Add a hive type
 ajoutRuche=Addirion of a hive
 listeRuches=Hives list
-daterucher=Date rucher
+daterucher=Apiary date
 
 listeRuchesOrdonnees=Hives ordered list along the route
 listePlusRuchesOrdonnees=Hives ordered detailed list along the route
@@ -184,9 +184,9 @@ pleinecran=Toggle full-screen
 couchemarqueursruches=Hive marker layer
 couchemarqueursruchers=Apiary marker layer
 ajoutderuches=Add hives
-rucherscarteign=Hives. IGN Map
-rucherscarteosm=Ruchers. OpenStreetMap
-rucherscarteggmaps=Hives. Google Maps
+rucherscarteign=Apiaries. IGN Map
+rucherscarteosm=Apiaries. OpenStreetMap
+rucherscarteggmaps=Apiaries. Google Maps
 aiderucherdetailignmarkers=Doubleclic on a hive to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect
 aiderucherlisteignmarkers=Doubleclic on an apiary to show details<br/>Clic to select, then clic to move<br/>Clic on map to deselect 
 selectruchesretrait=Select hives to remove
