--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -176,8 +176,11 @@ depot=Dépôt
 ressource=Ressource
 ajoutRuches=Ajouter des ruches
 creationevecadrezero=Création événement 0 cadre
-
+poidsParRuches=Poids/Ruches
 enregistreDessin=Enregistrer le dessin
+type=Type
+nb=Nb
+etat=État
 
 # carte ign
 pleinecran=Bascule plein écran
