--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -78,11 +78,11 @@ Ordre=Order
 # Essaim statistiques production
 Max=Max
 Min=Min
-Moyen=Moyen
+Moyen=Average
 Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 
-aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
+aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 
 # Accueil
 accueil=Home page
@@ -176,8 +176,12 @@ depot=Depot
 ressource=Resource
 ajoutRuches=Add hives
 creationevecadrezero=Create 0 super event
-
+poidsParRuches=Weight/Hives
 enregistreDessin=Save drawing
+historique=History
+type=Type
+nb=Nb
+etat=State
 
 # carte ign
 pleinecran=Toggle full-screen
