traduction correction clone ruche

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -140,7 +140,7 @@ ajoutretraithausses=Add/Remove/Order supers.
 # Ruche detail clone
 cloner=Clone
 nomruchesvirgule=Hive names separated with a comma
-nomruchesexistentdeja=already exist(s)
+nomexistentdeja=already exist(s)
 creer=Create
 evenementPesee=Add a weight event
 evenementCommentaire=Add a comment event
