clone essaim traduction retour controller

--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -272,6 +272,8 @@ souche=Stem
 agressivite=Agressiveness
 proprete=Cleanliness
 
+cloneessaimcrees=Swarm(s) {0} created
+
 # essaimDispersionForm
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
 nouvellereine=New queen : choose the swarm for hive
