--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -271,6 +271,8 @@ souche=Souche
 agressivite=Agressivité
 proprete=Propreté
 
+cloneessaimcrees=Essaim(s) {0} créé(s)
+
 # essaimDispersionForm
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
 nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
