clone hausse et ruche traduction retour java

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -141,6 +141,7 @@ ajoutretraithausses=Ajout/Retrait/Ordre de hausses.
 cloner=Cloner
 nomruchesvirgule=Nom des ruches séparés par une virgule
 nomexistentdeja=existe(nt) déjà
+cloneruchecreees=Ruche(s) {0} créée(s)
 creer=Créer
 evenementPesee=Ajouter un événement Pesée
 evenementCommentaire=Ajouter un événement Commentaire
@@ -295,6 +296,7 @@ saisirnbcadresinfmax=Saisir le nombre de cadres < Nombre de cadres max
 nomhaussesvirgule=Nom des hausses séparés par une virgule
 evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
+clonehaussecreees=Hausse(s) {0} créée(s)
 
 # Template essaim sucre form
 sucreajoutgrammes=Sucre ajouté en grammes
