--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -141,6 +141,7 @@ ajoutretraithausses=Add/Remove/Order supers.
 cloner=Clone
 nomruchesvirgule=Hive names separated with a comma
 nomexistentdeja=already exist(s)
+cloneruchecreees=Hives(s) {0} created
 creer=Create
 evenementPesee=Add a weight event
 evenementCommentaire=Add a comment event
@@ -296,6 +297,7 @@ saisirnbcadresinfmax=Get number of frames < Max frame number
 nomhaussesvirgule=Super names separated with a comma
 evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
+clonehaussecreees=Super(s) {0} created
 
 # Template essaim sucre form
 sucreajoutgrammes=Sugar added in grams
