messages.properties infos.html

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -46,6 +46,10 @@ haussesnonposees=hausses non posées
 ruchesavecessaim=ruches avec essaim, 
 haussesposees=hausses posées 
 Distance=Distance
+valeursParAnnee=Valeurs par année
+poidsMielEnPot=Poids miel en pot
+nbEssaims=Nb essaims
+poidsMiel_nbEssaims=Poids miel / Nb essaims
 		
 # Templates commun
 modifier=Modifier
