--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -46,6 +46,10 @@ haussesnonposees=free supers
 ruchesavecessaim=hives with a swarm, 
 haussesposees=supers on a hive 
 Distance=Distance
+valeursParAnnee=Values per year
+poidsMielEnPot=Honey weight in jar
+nbEssaims=Nb swarms
+poidsMiel_nbEssaims=Honey weight / Nb swarms
 		
 # Templates commun
 modifier=Modify
