infos.html traduction en

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -50,6 +50,9 @@ valeursParAnnee=Valeurs par année
 poidsMielEnPot=Poids miel en pot
 nbEssaims=Nb essaims
 poidsMiel_nbEssaims=Poids miel / Nb essaims
+nbEssaimsCrees=Nb essaims créés
+nbEssaimsDisperses=Nb essaims dispersés
+nbTraitements=Nb traitements
 		
 # Templates commun
 modifier=Modifier
