--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -50,7 +50,10 @@ valeursParAnnee=Values per year
 poidsMielEnPot=Honey weight in jar
 nbEssaims=Nb swarms
 poidsMiel_nbEssaims=Honey weight / Nb swarms
-		
+nbEssaimsCrees=Nb created swarms
+nbEssaimsDisperses=Nb dispersed swarms
+nbTraitements=Nb treatments
+
 # Templates commun
 modifier=Modify
 nom=Name
