infos.html traduction

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -53,6 +53,7 @@ poidsMiel_nbEssaims=Poids miel / Nb essaims
 nbEssaimsCrees=Nb essaims créés
 nbEssaimsDisperses=Nb essaims dispersés
 nbTraitements=Nb traitements
+ruchesAvecEssaimDepot=ruche(s) avec essaim au dépôt
 		
 # Templates commun
 modifier=Modifier
