--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -53,6 +53,7 @@ poidsMiel_nbEssaims=Honey weight / Nb swarms
 nbEssaimsCrees=Nb created swarms
 nbEssaimsDisperses=Nb dispersed swarms
 nbTraitements=Nb treatments
+ruchesAvecEssaimDepot=hive(s) with swarm at the depot
 
 # Templates commun
 modifier=Modify
