infos.html traduction en

--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -54,6 +54,10 @@ nbEssaimsCrees=Nb essaims créés
 nbEssaimsDisperses=Nb essaims dispersés
 nbTraitements=Nb traitements
 ruchesAvecEssaimDepot=ruche(s) avec essaim au dépôt
+ruchesAvecHaussesDepot=ruche(s) avec hausses au dépôt
+ruchesSansEssaimPasDepot=ruche(s) sans essaim qui ne sont pas au dépôt
+essaimsActifsHorsRuche=essaim(s) actif(s) hors ruche
+ruchersLoinDeLeursRuches=rucher(s) à plus de {0}m du barycentre de leurs ruches
 		
 # Templates commun
 modifier=Modifier
