--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -54,6 +54,10 @@ nbEssaimsCrees=Nb created swarms
 nbEssaimsDisperses=Nb dispersed swarms
 nbTraitements=Nb treatments
 ruchesAvecEssaimDepot=hive(s) with swarm at the depot
+ruchesAvecHaussesDepot=hive(s) with supers at the depot
+ruchesSansEssaimPasDepot=hive(s) without swarm not at the depot
+essaimsActifsHorsRuche=active swarm(s) outside the hive
+ruchersLoinDeLeursRuches=apiaries more than {0}m from their hives
 
 # Templates commun
 modifier=Modify
