--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -194,6 +194,7 @@ enregistreDessin=Enregistrer le dessin
 type=Type
 nb=Nb
 etat=État
+depotNePeutEtreSupprime=Le dépôt ne peut être supprimé
 
 # carte ign
 pleinecran=Bascule plein écran
@@ -272,6 +273,7 @@ associationruche=Associer avec une ruche
 association=Association
 essaimdanslaruche=Cet essaim est dans la ruche
 mettreessaimdanslaruche=Mettre cet essaim dans le ruche :
+echangePositionsRuches=Échanger les positions des ruches {0} et {1}
 
 essaimsupprimerecolte=Cette essaim ne peut être supprimé, il est référencé dans une récolte
 supprimeressaimevenements=Supprimer cet essaim et ses événements ?
@@ -444,3 +446,4 @@ description=Description
 apiRest=API REST
 inactifs=Inactifs
 preferences=Préférences
+confirmDeploie=Voulez-vous déployer l'application à partir de ses sources sur gitlab ?
