--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -33,8 +33,8 @@ login=Login
 password=Password
 roles=Roles
 resetPassword=Reset password
-forgotPassword=Forgot pasword ?
-affichermotdepasse=Show password ?
+forgotPassword=Forgot pasword?
+affichermotdepasse=Show password?
 
 # Template infos
 infos=Infos
@@ -162,8 +162,8 @@ evenementCadres=Add a frame event
 pesee=Weighing
 changerDeRucher=Move to another apiary
 ruchenepeutetresupprimeerecolte=This hive cannot be deleted, it is used in a harvest
-supprimerrucheeteven?=Delete this hive and its events ?
-supprimercetteruche?=Delete this hive ?
+supprimerrucheeteven?=Delete this hive and its events?
+supprimercetteruche?=Delete this hive?
 ajouthausseXXsur=Add hive {0} on 
 retraithausseXXdela=Remove super {0} from 
 retraithausse=Remove super 
@@ -195,6 +195,7 @@ historique=History
 type=Type
 nb=Nb
 etat=State
+depotNePeutEtreSupprime=The depot cannot be deleted
 
 # carte ign
 pleinecran=Toggle full-screen
@@ -210,12 +211,12 @@ selectruchesretrait=Select hives to remove
 selectruchesajout=Select hives to add
 ajoutruches=Addition in hive
 recentrer=Recenter all apiaries on their hives
-recentrer?=Recenter all apiaries on their hives ?
+recentrer?=Recenter all apiaries on their hives?
 rapprocher=Bring closer hives that are too far
-rapprocher?=Bring closer hives that are too far ?
+rapprocher?=Bring closer hives that are too far?
 ruchernonsupprimerefrecolte=This apiary cannot be deleted, it is used in a harvest
-supprimerruchereteven=Delete this apiary and all its events ?
-supprimercerucher?=Delete this apiary ?
+supprimerruchereteven=Delete this apiary and all its events?
+supprimercerucher?=Delete this apiary?
 exportPng=PNG export
 exportPdf=PDF export
 exportGPX=GPX export
@@ -234,7 +235,7 @@ lesPersonnes=People
 ajouterPersonne=Add a person
 listePersonnes=Persons list
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
-supprimercettepersonne=Delete this person ?
+supprimercettepersonne=Delete this person?
 
 # Template essaim
 evenementCommentaireEssaim=Add a swarm comment event
@@ -273,10 +274,11 @@ associationruche=Association with a hive
 association=Association
 essaimdanslaruche=This swarm in in hive
 mettreessaimdanslaruche=Put this swarm in hive :
+echangePositionsRuches=Exchange positions of hives {0} and {1}
 
 essaimsupprimerecolte=This swarm cannot be deleted, it is used in an harvest
-supprimeressaimevenements=Delete this swarm and his events ?
-supprimeressaim=Delete this swarm ?
+supprimeressaimevenements=Delete this swarm and his events?
+supprimeressaim=Delete this swarm?
 mettreessaimdansruche=Put swarm in this hive
 retourrucheaudepot=Hive back to depot
 graphedescendance=Descendants graph
@@ -358,8 +360,8 @@ poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
 recolteHausse=Harvest - Supers
 recolteHausseDepot=Remove all supers of the harvest from their hives
-enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives ?
-supprimerrecolteethausses=Remove this harvest and all its supers ?
+enlevertoutesleshaussesrecolte=Remove all supers of this harvest from their hives?
+supprimerrecolteethausses=Remove this harvest and all its supers?
 statistiquesessaims=Swarms statistics
 productionessaim=Production by swarm. 
 saisirpoids=Get weight
@@ -419,10 +421,10 @@ evenementCree=Create an event
 aucun=<None>
 aucune=<None>
 modifierevenement=Modify this event
-supprimerevenement?=Delete this event ?
-supprimerhausseevenement=Delete this super and all its events ?
-supprimerhausse?=Delete this super ?
-supprimerevenement=Delete this event ?
+supprimerevenement?=Delete this event?
+supprimerhausseevenement=Delete this super and all its events?
+supprimerhausse?=Delete this super?
+supprimerevenement=Delete this event?
 afficherrucheetc=Show/hide hive, swarm...
 tous=All
 
@@ -444,4 +446,4 @@ description=Description
 apiRest=REST API
 inactifs=Inactives
 preferences=Preferences
-
+confirmDeploie=Do you want to deploy the application from its sources on gitlab?
