--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -241,7 +241,7 @@ evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
 essaim=Essaim
 Pasdessaim=Pas d'essaim
 lesEssaims=Essaims
-nomessaimsvirgule=Nom des essaims séparés par une virgule
+nomessaimsvirgule=Nom des essaims séparés par une virgule.\nOu avec le nom d'une ruche après le nom\nd'un essaim séparés par un point virgule
 traitement=Traitement varroa
 traitementLot=Traitement Varroa du lot d'essaims 
 reineMarquee=Reine marquée
@@ -287,6 +287,9 @@ agressivite=Agressivité
 proprete=Propreté
 
 cloneessaimcrees=Essaim(s) {0} créé(s)
+
+# Template essaimDetail
+nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
 
 # essaimDispersionForm
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
@@ -353,6 +356,7 @@ selecthaussestraiter=Sélectionner les hausses à traiter
 # Template recolteHausseForm
 plus=Plus
 poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
+poidsVideKg=Poids vide {0}kg
 
 # Template récolte détail
 detailRecolte=Détail de la récolte
