--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -242,7 +242,7 @@ evenementCommentaireEssaim=Add a swarm comment event
 essaim=Swarm
 Pasdessaim=No swarm
 lesEssaims=Swarms
-nomessaimsvirgule=Swarm names separated with a comma
+nomessaimsvirgule=Swarm names separated with a comma\nOr with the name of a hive after the name\nof a swarm separated by a semicolon 
 traitement=Varroa treatment
 traitementLot=Batch Varroa treatment 
 reineMarquee=Marked queen
@@ -288,6 +288,9 @@ agressivite=Agressiveness
 proprete=Cleanliness
 
 cloneessaimcrees=Swarm(s) {0} created
+
+# Template essaimDetail
+nexistentPasOuPasVides=do not exist or are not empty
 
 # essaimDispersionForm
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
@@ -353,6 +356,7 @@ selecthaussestraiter=Select the supers to be processed
 # Template recolteHausseForm
 plus=More
 poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
+poidsVideKg=Empty weight {0}kg
 
 # Template récolte détail
 detailRecolte=Harvest detail
