--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -18,7 +18,9 @@ menuhausse=Hausse
 Admin=Admin
 logs=Logs
 
-# Template preferences
+# Template parametresForm
+voirInactif=Afficher les inactifs
+voirLatLon=Afficher latitude et longitude dans les listes
 datedecalee=Date décalée
 
 # Template login
@@ -87,12 +89,13 @@ Total=Total
 Totalpage=Total page
 Ordre=Ordre
 
-# Essaim statistiques production
+# Template essaimStatistiques
 Max=Max
 Min=Min
 Moyen=Moyen
 Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
+ProductionEssaim=Production Essaims
 
 aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
 
@@ -102,9 +105,7 @@ retouraccueil=Retour à la page d'Accueil
 erreur=Erreur {0}
 accueil.message=Les Abeilles de la Lisette
 parametres=Paramètres
-voirInactif=Afficher les inactifs
 masquerInactif=Masquer les inactifs
-voirLatLon=Afficher latitude et longitude dans les listes
 
 # Pages erreur
 responsestatus=Code http : 
@@ -170,6 +171,9 @@ retraithausse=Retrait de hausse
 
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
 
+# Template rucheCadreForm
+cadresLe=cadres le
+ 
 # Template descendance
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
@@ -343,7 +347,6 @@ enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
 
 # Template RecolteStatEssaim
 ProductionEssaimRecolte=Production Essaim/Récolte
-ProductionEssaim=Production Essaims
 
 ProductionRuchersRecolte=Production Ruchers par récolte
 
