--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -18,7 +18,9 @@ menuhausse=Super
 Admin=Admin
 logs=Logs
 
-# Template preferences
+# Template parametresForm
+voirInactif=Show inactives
+voirLatLon=Show latitude et longitude in lists
 datedecalee=Shifted date
 
 # Template login
@@ -87,12 +89,13 @@ Total=Total
 Totalpage=Total page
 Ordre=Order
 
-# Essaim statistiques production
+# Template essaimStatistiques
 Max=Max
 Min=Min
 Moyen=Average
 Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
+ProductionEssaim=Production Swarm
 
 aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
 
@@ -102,9 +105,7 @@ retouraccueil=Back to home page
 erreur=Error {0}
 accueil.message=La Lisette Bees
 parametres=Parameters
-voirInactif=Show inactives
 masquerInactif=Hide inactives
-voirLatLon=Show latitude et longitude in lists
 
 # Pages erreur
 responsestatus=Http code : 
@@ -169,6 +170,9 @@ retraithausseXXdela=Remove super {0} from
 retraithausse=Remove super 
 
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
+
+# Template rucheCadreForm
+cadresLe=frames on
 
 # Template descendance
 MielKg=Hoey(kg)
@@ -343,7 +347,6 @@ enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 
 # Template RecolteStatEssaim
 ProductionEssaimRecolte=Production Swarm/Harvest
-ProductionEssaim=Production Swarm
 
 ProductionRuchersRecolte=Production Apiaries per harvest
 
