--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -1,10 +1,10 @@
-# 
+# Const.java
 Idrucheinconnu=Identifiant ruche inconnu
 Idrucherinconnu=Identifiant rucher inconnu
 Idessaiminconnu=Identifiant essaim inconnu
 Idhausseinconnu=Identifiant hausse inconnu
 
-# Templade include.html
+# include.html
 include.title=Ruches
 include.footer= *** Ruches - GPL3 - 
 liste=Liste
@@ -18,27 +18,31 @@ menuhausse=Hausse
 Admin=Admin
 logs=Logs
 
-# Template parametresForm
+# parametresForm.html
 voirInactif=Afficher les inactifs
 voirLatLon=Afficher latitude et longitude dans les listes
 datedecalee=Date décalée
 
-# Template login
-connexion=Connexion
+# login.html
 nomOuPassIncorrect=Nom d\'utilisateur ou mot de passe incorrect
+deconnecte=Vous avez été déconnecté
 nomUtilisateur=Nom d\'utilisateur
 motDePasse=Mot de passe
-deconnecte=Vous avez été déconnecté
-deconnexion=Déconnexion
-connecte=Connecté
-login=Login
-password=Password
-roles=Rôles
-resetPassword=Réinitialistation du mot de passe
-forgotPassword=Mot de passe oublié ?
 affichermotdepasse=Afficher le mot de passe ?
+connexion=Connexion
+forgotPassword=Mot de passe oublié ?
 
-# Template infos
+# index.html
+connecte=Connecté
+deconnexion=Déconnexion
+
+login=Login
+roles=Rôles
+
+# passwordResetForm.html resetPasswordForm.html
+resetPassword=Réinitialistation du mot de passe
+
+# infos.html
 infos=Infos
 ruchersdepot=ruchers (avec le dépôt)
 rucheset=ruches et 
@@ -89,7 +93,7 @@ Total=Total
 Totalpage=Total page
 Ordre=Ordre
 
-# Template essaimStatistiques
+# essaimStatistiques.html
 Max=Max
 Min=Min
 Moyen=Moyen
@@ -107,10 +111,8 @@ accueil.message=Les Abeilles de la Lisette
 parametres=Paramètres
 masquerInactif=Masquer les inactifs
 
-# Pages erreur
-responsestatus=Code http : 
-occurred=Date
-trace=Pile de l'exception : 
+# Template error
+page=Page
 oups=Oups, quelque chose s'est mal passé !
 
 # Templates ruche
