--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -1,10 +1,10 @@
-# 
+# Const.java
 Idrucheinconnu=Unknown hive id
 Idrucherinconnu=Unknown apiary id
 Idessaiminconnu=Unknown swarm id
 Idhausseinconnu=Unknown super id
 
-# Templade include.html
+# include.html
 include.title=Hives
 include.footer= *** Ruches - GPL3 -
 liste=List
@@ -18,27 +18,31 @@ menuhausse=Super
 Admin=Admin
 logs=Logs
 
-# Template parametresForm
+# parametresForm.html
 voirInactif=Show inactives
 voirLatLon=Show latitude et longitude in lists
 datedecalee=Shifted date
 
-# Template login
-connexion=Connection
+# login.html
 nomOuPassIncorrect=Incorrect user name or password
+deconnecte=You have been disconnected
 nomUtilisateur=User name
 motDePasse=Password
-deconnecte=You have been disconnected
-deconnexion=Disconnect
-connecte=Connected
-login=Login
-password=Password
-roles=Roles
-resetPassword=Reset password
-forgotPassword=Forgot pasword?
 affichermotdepasse=Show password?
+connexion=Connection
+forgotPassword=Forgot pasword?
 
-# Template infos
+# index.html
+connecte=Connected
+deconnexion=Disconnect
+
+login=Login
+roles=Roles
+
+# passwordResetForm.html resetPasswordForm.html
+resetPassword=Reset password
+
+# infos.html
 infos=Infos
 ruchersdepot=apiaries (with depot)
 rucheset=hives and 
@@ -89,7 +93,7 @@ Total=Total
 Totalpage=Total page
 Ordre=Order
 
-# Template essaimStatistiques
+# essaimStatistiques.html
 Max=Max
 Min=Min
 Moyen=Average
@@ -107,10 +111,8 @@ accueil.message=La Lisette Bees
 parametres=Parameters
 masquerInactif=Hide inactives
 
-# Pages erreur
-responsestatus=Http code : 
-occurred=Date
-trace=Exception stack : 
+# Template error
+page=Page
 oups=Oups, something went wrong !
 
 # Templates ruche
