--- a/src/main/resources/locale/messages.properties
+++ b/src/main/resources/locale/messages.properties
@@ -100,18 +100,12 @@ Moyen=Moyen
 Duree=Durée
 aideStatistiqueEssaim=Durée d'existence de l'essaim en jours<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total sur la durée d'existence<br/>- Récolte Max et Min<br/>- Moyen par année d'existence
 ProductionEssaim=Production Essaims
-
-aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
-
-# Accueil
-accueil=Accueil
-retouraccueil=Retour à la page d'Accueil
-erreur=Erreur {0}
-accueil.message=Les Abeilles de la Lisette
-parametres=Paramètres
 masquerInactif=Masquer les inactifs
 
-# Template error
+# rucherStatistiques.html
+aideStatistiqueRucher=Récolte : nombre de récoltes<br/>Poids de miel produit Total, Max, Min et Moyen en kg :<br/>- Total pour le rucher<br/>- Récolte Max et Min<br/>- Moyen par récolte
+
+# error
 page=Page
 oups=Oups, quelque chose s'est mal passé !
 
@@ -173,14 +167,14 @@ retraithausse=Retrait de hausse
 
 evenruchercadreaide=B bâti, G gaufré, A amorcé, M Miel, P Pollen, I indéterminé, V vide, T partition, Couvain operculé O, ouvert U
 
-# Template rucheCadreForm
+# rucheCadreForm
 cadresLe=cadres le
  
-# Template descendance
+# descendance
 MielKg=Miel(kg)
 MielDescKg=Miel descendance(kg) 
 
-# Template rucher
+# rucher
 actif=Actif
 rucher=Rucher
 lesRuchers=Ruchers
@@ -231,7 +225,7 @@ statistiquesruchers=Statistiques ruchers
 cercles=Cercles
 distButinage=Distances de butinage
 
-# Template personne
+# personne
 prenom=Prénom
 personne=Personne
 email=Email
@@ -242,7 +236,7 @@ listePersonnes=Liste des personnes
 personnenonsupprimeerefrrucher=Cette personne ne peut être supprimée, elle est référencée dans un rucher
 supprimercettepersonne=Supprimer cette personne ?
 
-# Template essaim
+# essaim
 evenementCommentaireEssaim=Ajouter un événement Commentaire essaim
 essaim=Essaim
 Pasdessaim=Pas d'essaim
@@ -294,14 +288,14 @@ proprete=Propreté
 
 cloneessaimcrees=Essaim(s) {0} créé(s)
 
-# Template essaimDetail
+# essaimDetail
 nexistentPasOuPasVides=n'existe(nt) pas ou ne sont pas vide(s)
 
 # essaimDispersionForm
 aideessaimdspersionform=Crée un événement dispersion, enlève l'essaim de la ruche et inactive l'essaim
 nouvellereine=Remérage : choisir l'essaim à mettre dans la ruche
 
-# Template hausse
+# hausse
 hausse=Hausse
 lesHausses=Hausses
 listeHausses=Liste des hausses
@@ -321,11 +315,11 @@ evenementRemplissage=Ajouter un événement Remplissage
 haussenonsupprimeerefrecolte=Cette hausse ne peut être supprimée, elle est référencée dans une récolte
 clonehaussecreees=Hausse(s) {0} créée(s)
 
-# Template essaim sucre form
+# essaim sucre form
 sucreajoutgrammes=Sucre ajouté en grammes
 sucrerestantgrammes=Sucre restant en grammes
 
-# Template récoltes
+# récoltes
 recolte=Récolte
 lesRecoltes=Récoltes
 date=Date
@@ -347,23 +341,23 @@ ajoutretraithaussesrecolte=Ajout/Retrait de hausses
 enlverhaussesrecoltedelai=La récolte date de plus de {0} jours, abandon.
 
 
-# Template RecolteStatEssaim
+# RecolteStatEssaim
 ProductionEssaimRecolte=Production Essaim/Récolte
 
 ProductionRuchersRecolte=Production Ruchers par récolte
 
-# Template récolte choix hausses
+# récolte choix hausses
 haussesRecolte=Hausses de la récolte
 choixHausesRecolte=Choix des hausses de la récolte
 retirerHausses=Retirer des hausses
 selecthaussestraiter=Sélectionner les hausses à traiter
 
-# Template recolteHausseForm
+# recolteHausseForm
 plus=Plus
 poidsAvantSupPoidsApres=Le poids avant extraction doit être supérieur ou égal au poids après extraction.
 poidsVideKg=Poids vide {0}kg
 
-# Template récolte détail
+# récolte détail
 detailRecolte=Détail de la récolte
 poidsAvant=Poids avant extraction
 poidsApres=Poids après extraction
