--- a/src/main/resources/locale/messages_en.properties
+++ b/src/main/resources/locale/messages_en.properties
@@ -100,18 +100,12 @@ Moyen=Average
 Duree=Duration
 aideStatistiqueEssaim=Swarm duration of existence (days)<br/>Weight of honey produced, Max, Min et Average (kg) :<br/>- Total over duration of existence<br/>- Harvest Max and Min<br/>- Average by year of existence
 ProductionEssaim=Production Swarm
-
-aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
-
-# Accueil
-accueil=Home page
-retouraccueil=Back to home page
-erreur=Error {0}
-accueil.message=La Lisette Bees
-parametres=Parameters
 masquerInactif=Hide inactives
 
-# Template error
+# rucherStatistiques.html
+aideStatistiqueRucher=Harvest : number of harvests<br/>Weight of honey produced, Max, Min and Average (kg) :<br/>- Total for apiary<br/>- Harvest Max and Min<br/>- Average by harvest
+
+# error
 page=Page
 oups=Oups, something went wrong !
 
@@ -173,14 +167,14 @@ retraithausse=Remove super
 
 evenruchercadreaide=B built, G embossed, A initiated, M Honey, P Pollen, I Indeterminate, V empty, T partition, Non sealed brood O, open U
 
-# Template rucheCadreForm
+# rucheCadreForm
 cadresLe=frames on
 
-# Template descendance
+# descendance
 MielKg=Hoey(kg)
 MielDescKg=Descendants honey(kg) 
 
-# Template rucher
+# rucher
 actif=Active
 rucher=Apiary
 lesRuchers=Apiaries
@@ -232,7 +226,7 @@ statistiquesruchers=Apiary statistics
 cercles=Circles
 distButinage=Foraging distances
 
-# Template personne
+# personne
 prenom=First name
 personne=People
 email=Email
@@ -243,7 +237,7 @@ listePersonnes=Persons list
 personnenonsupprimeerefrrucher=This person cannot be deleted, she is used on an apiary
 supprimercettepersonne=Delete this person?
 
-# Template essaim
+# essaim
 evenementCommentaireEssaim=Add a swarm comment event
 essaim=Swarm
 Pasdessaim=No swarm
@@ -295,14 +289,14 @@ proprete=Cleanliness
 
 cloneessaimcrees=Swarm(s) {0} created
 
-# Template essaimDetail
+# essaimDetail
 nexistentPasOuPasVides=do not exist or are not empty
 
 # essaimDispersionForm
 aideessaimdspersionform=Create a dispersing event, remove the swarm from the hive and inactivate the swarm
 nouvellereine=New queen : choose the swarm for hive
 
-# Template hausse
+# hausse
 hausse=Super
 lesHausses=Supers
 listeHausses=Supers list
@@ -322,11 +316,11 @@ evenementRemplissage=Add a filling event
 haussenonsupprimeerefrecolte=This super cannot be deleted, it is used in an harvest
 clonehaussecreees=Super(s) {0} created
 
-# Template essaim sucre form
+# essaim sucre form
 sucreajoutgrammes=Sugar added in grams
 sucrerestantgrammes=Sugar left in grams
 
-# Template récoltes
+# récoltes
 recolte=Harvest
 lesRecoltes=Harvests
 date=Date
@@ -347,23 +341,23 @@ recoltesannees=Harvests by years, weight of honey in pots (kg)
 ajoutretraithaussesrecolte=Addition/Removal of supers
 enlverhaussesrecoltedelai= The harvest is more than {0} days old, abort.
 
-# Template RecolteStatEssaim
+# RecolteStatEssaim
 ProductionEssaimRecolte=Production Swarm/Harvest
 
 ProductionRuchersRecolte=Production Apiaries per harvest
 
-# Template récolte choix hausses
+# récolte choix hausses
 haussesRecolte=Harvest supers
 choixHausesRecolte=Select harvest supers
 retirerHausses=Remove supers
 selecthaussestraiter=Select the supers to be processed
 
-# Template recolteHausseForm
+# recolteHausseForm
 plus=More
 poidsAvantSupPoidsApres=The weight before extraction must be greater than or equal to the weight after extraction.
 poidsVideKg=Empty weight {0}kg
 
-# Template récolte détail
+# récolte détail
 detailRecolte=Harvest detail
 poidsAvant=Weight before harvest
 poidsApres=Weight after harvest
